--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -301,7 +301,7 @@ jobs:
           df -hT ${PWD}
           git clone -q --single-branch --depth=1 --branch=main https://github.com/armbian/build.git build
           ln -sf /builder/build ${GITHUB_WORKSPACE}/build
-          ln -sf /builder/build /home/runner/work/_actions/yYang365/amlogic-s9xxx-armbian/tw07/build
+          # ln -sf /builder/build /home/runner/work/_actions/yYang365/amlogic-s9xxx-armbian/tw07/build
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Compile Armbian [ ${{ inputs.set_release }} ]
